--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -10,7 +10,7 @@
 
 .nav-logo {
   font-family: Outfit;
-  font-size: 50px;
+  font-size: 60px;
   font-weight: 500;
   text-shadow: 0 0 5px #000000;
 }
@@ -23,9 +23,9 @@
   display: flex;
   align-items: center;
   list-style: none;
-  font-size: 23px;
-  gap: 90px;
-  text-shadow: 0 0 5px #000000;
+  font-size: 30px;
+  gap: 80px;
+  text-shadow: 0 0 10px #000000;
 }
 
 .nav-contact {
