--- a/src/Pages/Discussions/Discussions.css
+++ b/src/Pages/Discussions/Discussions.css
@@ -22,8 +22,6 @@
   position: relative; /* Changed from fixed to allow content to scroll */
   object-fit: cover;
   z-index: -1;
-  background: -webkit-linear-gradient(45deg, #49a09d, #5f2c82);
-  background: linear-gradient(45deg, #49a09d, #5f2c82);
 }
 
 @keyframes fadeIn {
@@ -41,8 +39,8 @@
 
 body {
   margin: 20;
-  background: -webkit-linear-gradient(45deg, #49a09d, #5f2c82);
-  background: linear-gradient(45deg, #49a09d, #5f2c82);
+  background: -webkit-linear-gradient(45deg, #49a09d, #008194);
+  background: linear-gradient(45deg, #49a09d, #008194);
   font-family: sans-serif;
   font-weight: 100;
   height: auto; /* Allow body to adjust to content height */
